--- a/appointments.html
+++ b/appointments.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link
       rel="pingback"
-      href="https://main.d3iswuqpfr7y7k.amplifyapp.com/xmlrpc.php"
+      href="https://weblee3232.websitepro.hosting/xmlrpc.php"
     />
 
     <script type="text/javascript">
