--- a/index.html
+++ b/index.html
@@ -2834,6 +2834,9 @@
                   </div>
                   <div
                     class="et_pb_section et_pb_section_13 et_pb_with_background et_section_regular"
+                    style="
+                          background-image: url(./model.jpeg);
+                        "
                   >
                     <div
                       class="et_pb_row et_pb_row_8 et_animated et_pb_equal_columns et_pb_gutters1"
