changed the footer image

--- a/index.html
+++ b/index.html
@@ -2835,7 +2835,7 @@
                   <div
                     class="et_pb_section et_pb_section_13 et_pb_with_background et_section_regular"
                     style="
-                          background-image: url(./model.jpeg);
+                          background-image: url(./hairBackground.jpg);
                         "
                   >
                     <div
