--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link
       rel="pingback"
-      href="https://newnewmain.d3iswuqpfr7y7k.amplifyapp.com	/xmlrpc.php"
+      href="https://newnewmain.d3iswuqpfr7y7k.amplifyapp.com"
     />
 
     <script type="text/javascript">
